fix: fix the star alignment

--- a/src/components/StarRating/StarRating.scss
+++ b/src/components/StarRating/StarRating.scss
@@ -2,5 +2,6 @@
     & svg {
         transform: scale(0.7);
         margin-right: -0.3rem;
+        display: inline;
     }
 }
